# py_ai_tutorial

./: .gitignore  CLAUDE.md  IMPLEMENTATION_GUIDE.md  NEXT_STEPS.md  QUICK_ACCESS.sh  README.md  STAGE3_PROJECTS.md  mkdocs.yml  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
.specify/memory/: constitution.md
configs/content/: datasets.yaml  environments.yaml  modules.yaml  projects.yaml  stages.yaml
data/stage3/: README.md  clothing_retail.csv  hospital_sales.csv
docs/: framework-comparison.md  prerequisites.md
docs/cross-platform/: setup-cloud-gpu.md  setup-linux.md  setup-macos-arm64.md  setup-macos-intel.md  setup-windows-native.md  setup-windows-wsl2.md  troubleshooting.md
docs/stage3/: index.md
docs/stage3/01-scientific-computing/: README.md
docs/stage3/02-pandas-practice/: README.md
docs/stage3/03-ml-basics/: README.md
docs/stage3/04-ml-advanced/: README.md
docs/stage3/projects/p04-telecom/: README.md
docs/stage3/projects/p05-retail/: README.md
docs/stage3/projects/p06-internet/: README.md
docs/stage3/projects/p07-ecommerce-annual/: README.md
docs/stage3/projects/p08-airline/: README.md
docs/stage3/projects/p09-credit/: README.md
docs/stage4/: index.md
docs/stage4/01-dl-basics/: README.md
docs/stage5/: index.md
notebooks/stage3/: 00-quick-start.ipynb  01-numpy-basics.ipynb  02-pandas-intro.ipynb  03-visualization.ipynb  04-descriptive-analysis.ipynb  05-data-preprocessing.ipynb  06-statistics-basics.ipynb  07-linear-algebra.ipynb  08-ml-algorithms.ipynb
notebooks/stage4/: 01-neural-network.ipynb
offline/: README.md
projects/stage3/p04-telecom/: README.md
scripts/data/: download-stage3.py  generate-stage3-data.py  generate-stage3-telecom-data-simple.py  generate-stage3-telecom-data.py
scripts/validation/: validate-paths.py  validate-relationships.py
specs/002-ai-tutorial-stages/: data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/002-ai-tutorial-stages/checklists/: requirements.md
specs/002-ai-tutorial-stages/contracts/: evaluation-api.yaml  project-template-schema.yaml
specs/002-ai-tutorial-stages/docs/: glossary.md  learning-path.md  prerequisites.md
specs/002-ai-tutorial-stages/docs/stage3/projects/: README.md
specs/002-ai-tutorial-stages/docs/stage3/projects/p01-healthcare/notebooks/: analysis.ipynb
specs/002-ai-tutorial-stages/docs/stage3/projects/p02-ecommerce/notebooks/: analysis.ipynb
specs/002-ai-tutorial-stages/docs/stage3/projects/p03-bank-marketing/notebooks/: analysis.ipynb
specs/002-ai-tutorial-stages/docs/stage3/projects/p04-telecom/: README.md
specs/002-ai-tutorial-stages/docs/stage3/projects/p04-telecom/notebooks/: analysis.ipynb
templates/notebook-template/: analysis-template.ipynb
